--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,7 +19,7 @@
         <ion-item nav-clear menu-close ng-click="login()" class="item item-icon-left">
             <i class="icon ion-ios7-person-outline"></i> <h2>Bin Wu</h2>
         </ion-item>
-        <ion-item nav-clear menu-close ng-click="login()" class="item item-icon-left">
+        <ion-item nav-clear menu-close href="#/app/todayRecommendation" class="item item-icon-left">
           <i class="icon ion-ios7-star-outline"></i> {{'TODAY_RECOMMENDATION' | translate}}
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/search" class="item item-icon-left">
