--- a/www/templates/ad.html
+++ b/www/templates/ad.html
@@ -1,5 +1,17 @@
-<ion-view title="Ad">
+<ion-view title="{{ad.title}}">
+    
   <ion-content class="has-header">
-    <h1>Ad</h1>
+   
+   <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered"
+  controls preload="auto" width="100%" height="300"
+  poster="http://video-js.zencoder.com/oceans-clip.png"
+  data-setup='{"example_option":true}'>
+    <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
+
+    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
+    </video>
+      <h1>{{'WANTEDPRICE'| translate}} {{ad.price}} </h1>
   </ion-content>
+    
+    
 </ion-view>
