--- a/www/templates/ad.html
+++ b/www/templates/ad.html
@@ -4,14 +4,17 @@
    
    <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered"
   controls preload="auto" width="100%" height="300"
-  poster="http://video-js.zencoder.com/oceans-clip.png"
-  data-setup='{"example_option":true}'>
-    <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4' />
+  poster="http://video-js.zencoder.com/oceans-clip.png">
+    <source src="" type='video/mp4' />
 
     <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
     </video>
-      <h1>{{'WANTEDPRICE'| translate}} {{ad.price}} </h1>
+      <p style="margin-left: 10px;margin-right: 10px; margin-top: 10px">
+          {{ad.content}}
+       </p>
   </ion-content>
     
-    
+    <div class="bar bar-footer bar-positive">
+  <div class="title">{{'CLICKTOANSWERQUESTION'| translate}} </div>
+</div>
 </ion-view>
